--- a/data_doc_aspherix/workflow_aspherix.template
+++ b/data_doc_aspherix/workflow_aspherix.template
@@ -13,7 +13,7 @@ steps:
   - calcjob: aspherix.insertion
 
     inputs:
-      code: aspherix@localhost-test
+      code: aspherix@localhost
 
       shape: sphere
 
