--- a/data_doc_fc_wf/workflow_aspherix.template
+++ b/data_doc_fc_wf/workflow_aspherix.template
@@ -29,7 +29,7 @@ steps:
         "$ref": "#/data_macro/aspherix_data"
 
 
-      py: python@localhost
+      py: python3@localhost
 
       asx: aspherix@localhost
 
